feat: achieve near 100% code coverage for User entity
- Simplify string field setters with consistent trim and normalization pattern
- Add pattern validation to firstName and lastName setters
- Change customData field from String to JsonNode to match JSONB database column
- Add comprehensive validation tests for all setter methods:
  - Pattern validation failures (firstName, lastName, address fields)
  - Length validation failures (city, state, country)
  - Format validation failures (streetAddress, postalCode)
  - Null handling tests for all optional address fields
- Update ValidationPatterns with improved PERSON_NAME regex
- Fix UserEntityTest to work with JsonNode and string normalization
- All 61 tests passing with comprehensive coverage

Coverage improvements:
- Lines 197, 211: firstName/lastName pattern validation
- Lines 262, 289, 317: null handling in address setters
- Lines 267, 280, 282, 294, 296, 322, 324: validation failures